--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@import url('https://fonts.googleapis.com/css2?family=Encode+Sans&family=Inter&family=Roboto&display=swap');
-
 :root {
   --sp-primary-200: #060903;
   --sp-primary-300: #231F20;
@@ -177,6 +174,7 @@ code {
     monospace;
 }
 
+/* 
 p {
   color: var(--sp-secondary-300);
   font-family: 'Inter';
@@ -187,4 +185,14 @@ h2 {
   font-family: 'Courier New';
   font-size: 40px;
   font-weight: 600
+} */
+
+h1 {
+  font-family: "Bitter", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4rem;
+  line-height: 4.4rem;
+  color: white
 }
