--- a/src/index.css
+++ b/src/index.css
@@ -234,3 +234,11 @@ h1 {
   line-height: 4.4rem;
   color: white
 }
+
+p {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.75rem;
+  line-height: 2rem;
+}
